--- a/icons.qrc
+++ b/icons.qrc
@@ -7,6 +7,8 @@
     <file alias="trash_icon">img/wgarbage.png</file>
     <file alias="save_icon">img/wheart.png</file>
     <file alias="next_icon">img/wnext.png</file>
-
+    <file alias="export_icon">img/wexport.png</file>
+    <file alias="settings_icon">img/wsettings.png</file>
+    <file alias="more_icon">img/wmore.png</file>
   </qresource>
 </RCC>
