--- a/icons.qrc
+++ b/icons.qrc
@@ -25,5 +25,7 @@
     <file alias="settings_icon">img/wsettings.png</file>
 
     <file alias="more_icon">img/wmore.png</file>
+
+    <file alias="tick_icon">img/gtick.png</file>
   </qresource>
 </RCC>
